Chronological listing of changes. If a particular SVN revision has no entry, that
check-in did not involve any code or feature changes.

2010-08-20 (r68)

* Added feature to forward method to real object from partial mock (thanks to Marco Sandrini)


2010-08-02 (r67)

* Fix to allow block arguments (thanks to Justin DeWind)


2010-07-28 (r62-r65)

* Now building OCMock library for simulator (i386) and device (armv7)
* Updated example to run tests on device                    
* Changed OCMOCK_VALUE macro to be iOS compatible (thanks to Derek Clarkson)


2010-07-21 (r61)

* Added a new target to build a static library for iOS use
* Created an example showing how to use OCMock in an iOS project


2010-05-19 (r57)

* Various small clean-ups; no change in functionality (thanks to Jonah Williams)


2010-04-18 (r56)

* Added block constraints and invocation handler (thanks to Justin DeWind)


2009-10-16 (r55)

* Fixed broken test for array argument descciptions (Craig Beck)
* Disambiguated mock table method name to avoid compiler warning
* Renamed some variables to avoid warnings when using -Wshadow
* Partial mocks are now deallocated as they should
* Fixed problems that occured when using mocks as arguments


2009-08-18 (r54)

* OnCall methods now have same signature as replaced ones.


2009-08-14 (r53)

* Fixed possible retain bug (Daniel Eggert)


2009-08-14 (r52)

* Added feature that allows to verify expectations are called in sequence.
* Improved detection of unqualified method return type.


2009-08-13 (r51)

* Fixed bug that caused crash when using method swizzling with void return type.


2009-07-14 (r49)

* Added support for calling arbitrary methods when stubbed methods are invoked.


2009-07-14 (r48)

* Added support for posting notifications (based on Jean-Francois Dontigny's code)


2009-07-14 (r46)

* Fixed bug around complex type encodings (Jean-Francois Dontigny)


2009-05-26 (r45)
